--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@ Home
     <div class="d-flex flex-column flex-lg-row justify-content-around">
         <a class="btn btn-lg btn-primary mb-3" href="deep_learning" role="button">Deep Learning</a>
         <a class="btn btn-lg btn-primary mb-3" href="reinforcement_learning" role="button">Reinforcement Learning</a>
-        <a class="btn btn-lg btn-primary mb-3" href="simulations" role="button">Simulations</a>
+        <a class="btn btn-lg btn-primary mb-3" href="simulation" role="button">Simulations</a>
     </div>
 </div>
 <!-- <form class="text-white text-left" method="post" action="/">
